--- a/mapnik/inc-style/symbols-draw.sty
+++ b/mapnik/inc-style/symbols-draw.sty
@@ -97,7 +97,7 @@
 		&maxscale_zoom15;
 		&minscale_zoom16;
 		<Filter>([natural] = 'cave_entrance')</Filter>
-		<TextSymbolizer face-name="DejaVu Sans Oblique" size="9" fill="black" halo-radius="2" halo-fill="rgba(255,255,255,0.7)" placement="point" dy="6">[name]</TextSymbolizer>
+		<TextSymbolizer face-name="DejaVu Sans Oblique" size="15" fill="black" halo-radius="2" halo-fill="rgba(255,255,255,0.7)" placement="point" dy="6">[name]</TextSymbolizer>
 	</Rule>
 
 	<Rule>
@@ -198,14 +198,14 @@
 		&minscale_zoom16;
  		<Filter>[tourism] = 'alpine_hut'</Filter>
 		<PointSymbolizer file="symbols-topo/hut_alpine.png"/>
-		<TextSymbolizer face-name="DejaVu Sans Oblique" size="9" fill="black" halo-radius="2" halo-fill="rgba(255,255,255,0.7)" placement="point" dy="6">[name]</TextSymbolizer>
+		<TextSymbolizer face-name="DejaVu Sans Oblique" size="20" fill="black" halo-radius="2" halo-fill="rgba(255,255,255,0.7)" placement="point" dy="6">[name]</TextSymbolizer>
 	</Rule>
 	<Rule>
 		&maxscale_zoom14;
 		&minscale_zoom16;
  		<Filter>[tourism] = 'wilderness_hut'</Filter>
 		<PointSymbolizer file="symbols-topo/hut_wilderness.png"/>
-		<TextSymbolizer face-name="DejaVu Sans Oblique" size="9" fill="black" halo-radius="2" halo-fill="rgba(255,255,255,0.7)" placement="point" dy="6">[name]</TextSymbolizer>
+		<TextSymbolizer face-name="DejaVu Sans Oblique" size="20" fill="black" halo-radius="2" halo-fill="rgba(255,255,255,0.7)" placement="point" dy="6">[name]</TextSymbolizer>
 	</Rule>
 	
 	<Rule>
@@ -218,7 +218,7 @@
 		&maxscale_zoom13;
 		&minscale_zoom14;
  		<Filter>([tourism] = 'camp_site') </Filter>
-		<PointSymbolizer file="symbols-topo/campsite_z13.png"/>
+		<PointSymbolizer file="symbols-topo/campsite.png"/>
 	</Rule>
 	<Rule>
 		&maxscale_zoom15;
@@ -228,9 +228,9 @@
 	</Rule>
 
 
-<!-- POIs from zoom 16 -->
+<!-- POIs from zoom 15-16 -->
 	<Rule>
-		&maxscale_zoom16;
+		&maxscale_zoom15;
 		&minscale_zoom16;
  		<Filter>([amenity] = 'hospital') </Filter>
 		<PointSymbolizer file="symbols-topo/hospital.png"/>
@@ -238,7 +238,7 @@
 	</Rule>
 
 <!--	<Rule>
-		&maxscale_zoom16;
+		&maxscale_zoom15;
 		&minscale_zoom16;
  		<Filter>([amenity] = 'pharmacy') </Filter>
 		<PointSymbolizer file="symbols-topo/pharmacy.png"/>
@@ -253,7 +253,7 @@
 	</Rule>
 
 <!-- <Rule>
-		&maxscale_zoom16;
+		&maxscale_zoom15;
 		&minscale_zoom16;
  		<Filter>([highway] = 'bus_stop') </Filter>
 		<PointSymbolizer file="symbols-topo/bus_stop.png"/>
